# excalitaur

./: .gitignore  README.md  index.html  package.json  vite.config.ts
.github/workflows/: ci.yml
src/: App.css  App.tsx  custom.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
