[package]
name = "excalitaur"
version = "1.0.0"
description = "Excalidraw - Standalone Edition"
authors = ["Excalidraw Teeam", "Mirza Saadat Baig"]
edition = "2021"

[lib]
name = "excalitaur_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-shell = "2.0.0"
tauri-plugin-process = "2.0.0"
tauri-plugin-fs = "2.0.0"
tauri-plugin-dialog = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
